--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </ul>
 
 <h3>Some Legal Stuff</h3>
-<p>Featherweight Camera is not created by or developed by Facebook Inc. Featherweight's Facebook interaction is limited to features provided through the Facebook API. Any appearance of Facebook graphics and trademarks are accessed through thier developer resources.</p>
+<p>Featherweight Camera is not created or developed by Facebook Inc. Featherweight's Facebook interaction is limited to features provided through the Facebook API. Any appearance of Facebook graphics and trademarks are accessed through thier developer resources.</p>
 
 <h3>
 
